---------------------------------------------------------------------------------------------------
Version: 19.0.11
Date: 2020-xxxxxxx
  Features:
  Changes:
  Bugfixes:
    - Support the new nuclear-ground tile type. Treated the same as landfil, like the dryest sand.
  Info:
    - Removed the biter_reincarnation remote interface as the functionality is included in my main utility library. No current other mod versions utilised the interface.
    - Moved to using the tree generation code from my main utility library.
---------------------------------------------------------------------------------------------------
Version: 18.0.10
Date: 2020-01-26
  Features:
    - Updated to Factorio 0.18 as-is
  Changes:
  Bugfixes:
    - fix reincarnation chances not being updated after mod setting changes if total chance was below 100%.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.9
Date: 2020-01-04
  Features:
  Changes:
    - Add support for landfill. As its mainly stone its the same as a dry desert tree types.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.8
Date: 2020-01-04
  Features:
  Changes:
  Bugfixes:
    - "add_random_tile_based_tree_near_position" remote call didn't link to a valid function name before.
    - fixed desync caused when other mods utilised the remote interface of this mod. Was incorrectly registered causing speradic availability.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.7
Date: 2020-01-04
  Features:
  Changes:
  Bugfixes:
    - Burning Tree reincarnation logic fixed to actually work
    - Fix multiple setting changes stacking rather than being re-calculated
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.6
Date: 2019-12-14
  Features: