@@ -1,12 +1,19 @@
 [mod-setting-name]
-turn-to-tree-chance-percent=Turn to tree chance
-burst-into-flames-chance-percent=Turn to burning tree chance
-tree-fire-max-hope-count=Tree fire hop max
-max_reincarnations_per_second=Max reincarnations that will be done per second
-max_seconds_wait_for_reincarnation=Max seconds a reincarnation can be queued for before its ignored
+biter_reincarnation-tree_fire_max_hop_count=Tree fire hop max
+biter_reincarnation-turn_to_tree_chance_percent=Turn to tree chance
+biter_reincarnation-turn_to_burning_tree_chance_percent=Turn to burning tree chance
+biter_reincarnation-turn_to_rock_chance_percent=Turn to rock chance
+biter_reincarnation-turn_to_cliff_chance_percent=Turn to cliff chance
+biter_reincarnation-large_reincarnations_push=Large reincarantions push things away
+biter_reincarnation-max_reincarnations_per_second=Max reincarnations per second
+biter_reincarnation-max_seconds_wait_for_reincarnation=Max reincarnation queued seconds
 
 [mod-setting-description]
-turn-to-tree-chance-percent=The percent change of a biter turning in to a tree on death. Combined event chances can be greater than 100%.
-burst-into-flames-chance-percent=The percent change of a biter turning in to a burning tree on death. The fire will spread to other trees nearby. Combined event chances can be greater than 100%.
-tree-fire-max-hope-count=How many times a tree fire can hop to another free from its origin tree. The game defualt is 100 to avoid the possibility of near infinite forest fires. To leave the setting unchanged use a value of -1.
-max_reincarnations_per_second=This only includes biters that are within the reincranate chance, but will include failed reincarante attempts due to no valid placement for a tree. Reincarantions are spread out over the second to balance CPU load.
+biter_reincarnation-tree_fire_max_hop_count=How many times a tree fire can hop to another free from its origin tree. The game defualt is 100 to avoid the possibility of near infinite forest fires. To leave the setting unchanged use a value of -1.
+biter_reincarnation-turn_to_tree_chance_percent=The percent change of a biter turning in to a tree on death. Combined event chances can be greater than 100%.
+biter_reincarnation-turn_to_burning_tree_chance_percent=The percent change of a biter turning in to a burning tree on death. The fire will spread to other trees nearby. Combined event chances can be greater than 100%.
+biter_reincarnation-turn_to_rock_chance_percent=The percent change of a biter turning in to a rock on death. Combined event chances can be greater than 100%.
+biter_reincarnation-turn_to_cliff_chance_percent=The percent change of a biter turning in to a cliff on death. Combined event chances can be greater than 100%.
+biter_reincarnation-large_reincarnations_push=If enabled then when large things are created they push thigns out of their way. Otherwise they crush and kill them.
+biter_reincarnation-max_reincarnations_per_second=This only includes biters that are within the reincranate chance, but will include failed reincarante attempts due to no valid placement for a tree. Reincarantions are spread out over the second to balance CPU load.
+biter_reincarnation-max_seconds_wait_for_reincarnation=Max seconds a reincarnation can be queued for before its discarded. This is to stop bulk reincarnation events from causing a very long running queue.
