@@ -3,9 +3,11 @@ local Events = require("utility/events")
 local EventScheduler = require("utility/event-scheduler")
 local Logging = require("utility/logging")
 local BiomeTrees = require("utility/functions/biome-trees")
-
 local Reincarnation = {}
+
 local maxQueueCyclesPerSecond = 60
+local reincarnationType = {tree = true, burningTree = true, rock = true, cliff = true}
+local unitsIgnored = {character = true}
 
 Reincarnation.OnLoad = function()
     Events.RegisterHandlerEvent(defines.events.on_runtime_mod_setting_changed, "Reincarnation.UpdateSetting", Reincarnation.UpdateSetting)
@@ -15,17 +17,21 @@ end
 
 Reincarnation.OnStartup = function()
     Reincarnation.UpdateSetting(nil)
-    --Do at an offset from 0 to try and avoid bunching on other scheduled thigns ticks
+    --Do at an offset from 0 to try and avoid bunching on other scheduled things ticks
     if not EventScheduler.IsEventScheduled("Reincarnation.ProcessReincarnationQueue", nil, nil) then
         EventScheduler.ScheduleEvent(6 + game.tick + global.reincarnationQueueProcessDelay, "Reincarnation.ProcessReincarnationQueue", nil, nil)
     end
 end
 
 Reincarnation.CreateGlobals = function()
+    global.reincarantionChanceList = global.reincarantionChanceList or {}
     global.rawTreeOnDeathChance = global.rawTreeOnDeathChance or 0
-    global.chanceTreeOnDeathChance = global.chanceTreeOnDeathChance or 0
     global.rawBurningTreeOnDeathChance = global.rawBurningTreeOnDeathChance or 0
-    global.chanceBurningTreeOnDeathChance = global.chanceBurningTreeOnDeathChance or 0
+    global.rawRockOnDeathChance = global.rawRockOnDeathChance or 0
+    global.rawCliffOnDeathChance = global.rawCliffOnDeathChance or 0
+    --global.rawExplosionOnDeathChance = global.rawExplosionOnDeathChance or 0
+    --global.rawWaterOnDeathChance = global.rawWaterOnDeathChance or 0
+    --global.rawLandfillOnDeathChance = global.rawLandfillOnDeathChance or 0
     global.reincarnationQueue = global.reincarnationQueue or {}
     global.reincarnationQueueProcessDelay = global.reincarnationQueueProcessDelay or 0
     global.reincarnationQueueToDoPerSecond = global.reincarnationQueueToDoPerSecond or 0
@@ -41,37 +47,53 @@ Reincarnation.UpdateSetting = function(event)
         settingName = event.setting
     end
 
-    if settingName == "burst-into-flames-chance-percent" or settingName == nil then
-        global.rawBurningTreeOnDeathChance = tonumber(settings.global["burst-into-flames-chance-percent"].value) / 100
-    end
-    if settingName == "turn-to-tree-chance-percent" or settingName == nil then
-        global.rawTreeOnDeathChance = tonumber(settings.global["turn-to-tree-chance-percent"].value) / 100
-    end
-    if settingName == "burst-into-flames-chance-percent" or settingName == "turn-to-tree-chance-percent" or settingName == nil then
-        local totalChance = global.rawBurningTreeOnDeathChance + global.rawTreeOnDeathChance
-        local multiplier = 1
-        if totalChance > 1 then
-            multiplier = multiplier / totalChance
-        end
-        global.chanceBurningTreeOnDeathChance = global.rawBurningTreeOnDeathChance * multiplier
-        global.chanceTreeOnDeathChance = global.rawTreeOnDeathChance * multiplier
+    if settingName == "biter_reincarnation-turn_to_tree_chance_percent" or settingName == nil then
+        global.rawTreeOnDeathChance = tonumber(settings.global["biter_reincarnation-turn_to_tree_chance_percent"].value) / 100
     end
 
-    if settingName == "max_reincarnations_per_second" or settingName == nil then
-        local perSecond = settings.global["max_reincarnations_per_second"].value
+    if settingName == "biter_reincarnation-turn_to_burning_tree_chance_percent" or settingName == nil then
+        global.rawBurningTreeOnDeathChance = tonumber(settings.global["biter_reincarnation-turn_to_burning_tree_chance_percent"].value) / 100
+    end
+
+    if settingName == "biter_reincarnation-turn_to_rock_chance_percent" or settingName == nil then
+        global.rawRockOnDeathChance = tonumber(settings.global["biter_reincarnation-turn_to_rock_chance_percent"].value) / 100
+    end
+
+    if settingName == "biter_reincarnation-turn_to_cliff_chance_percent" or settingName == nil then
+        global.rawCliffOnDeathChance = tonumber(settings.global["biter_reincarnation-turn_to_cliff_chance_percent"].value) / 100
+    end
+
+    --if settingName == "turn-to-explosion-chance-percent" or settingName == nil then
+    --    global.rawExplosionOnDeathChance = tonumber(settings.global["turn-to-explosion-chance-percent"].value) / 100
+    --end
+
+    --if settingName == "turn-to-water-chance-percent" or settingName == nil then
+    --    global.rawWaterOnDeathChance = tonumber(settings.global["turn-to-water-chance-percent"].value) / 100
+    --end
+
+    --if settingName == "turn-to-landfill-chance-percent" or settingName == nil then
+    --    global.rawLandfillOnDeathChance = tonumber(settings.global["turn-to-landfill-chance-percent"].value) / 100
+    --end
+
+    if settingName == "biter_reincarnation-max_reincarnations_per_second" or settingName == nil then
+        local perSecond = settings.global["biter_reincarnation-max_reincarnations_per_second"].value
         local cyclesPerSecond = math.min(perSecond, maxQueueCyclesPerSecond)
         global.reincarnationQueueToDoPerSecond = perSecond
         global.reincarnationQueueCyclesPerSecond = cyclesPerSecond
         global.reincarnationQueueProcessDelay = math.floor(60 / cyclesPerSecond)
     end
 
-    if settingName == "max_seconds_wait_for_reincarnation" or settingName == nil then
-        global.maxTicksWaitForReincarnation = settings.global["max_seconds_wait_for_reincarnation"].value * 60
+    if settingName == "biter_reincarnation-max_seconds_wait_for_reincarnation" or settingName == nil then
+        global.maxTicksWaitForReincarnation = settings.global["biter_reincarnation-max_seconds_wait_for_reincarnation"].value * 60
     end
-end
 
-Reincarnation.AddReincarnatonToQueue = function(surface, position, type)
-    table.insert(global.reincarnationQueue, {loggedTick = game.tick, surface = surface, position = position, type = type})
+    local reincarantionChanceList = {
+        {name = reincarnationType.tree, chance = global.rawTreeOnDeathChance},
+        {name = reincarnationType.burningTree, chance = global.rawBurningTreeOnDeathChance},
+        {name = reincarnationType.rock, chance = global.rawRockOnDeathChance},
+        {name = reincarnationType.cliff, chance = global.rawCliffOnDeathChance}
+    }
+    global.reincarantionChanceList = Utils.NormaliseChanceList(reincarantionChanceList, "chance", true)
 end
 
 Reincarnation.ProcessReincarnationQueue = function()
@@ -93,14 +115,19 @@ Reincarnation.ProcessReincarnationQueue = function()
         table.remove(global.reincarnationQueue, k)
         if details.loggedTick + global.maxTicksWaitForReincarnation >= game.tick then
             local surface, targetPosition, type = details.surface, details.position, details.type
-            if type == "tree" then
+            if type == reincarnationType.tree then
                 BiomeTrees.AddBiomeTreeNearPosition(surface, targetPosition, 2)
-            elseif type == "burningTree" then
+            elseif type == reincarnationType.burningTree then
                 local createdTree = BiomeTrees.AddBiomeTreeNearPosition(surface, targetPosition, 2)
                 if createdTree ~= nil then
                     targetPosition = createdTree.position
                 end
                 Reincarnation.AddTreeFireToPosition(surface, targetPosition)
+            elseif type == reincarnationType.rock then
+                BiomeTrees.AddBiomeTreeNearPosition(surface, targetPosition, 2)
+            elseif type == reincarnationType.cliff then
+            else
+                game.print("TODO: " .. tostring(type))
             end
             doneThisCycle = doneThisCycle + 1
             global.reincarnationQueueDoneThisSecond = global.reincarnationQueueDoneThisSecond + 1
@@ -112,27 +139,19 @@ Reincarnation.ProcessReincarnationQueue = function()
     end
 end
 
-Reincarnation.BiterDied = function(entity)
-    local surface = entity.surface
-    local targetPosition = entity.position
-    local random = math.random()
-    local chance = global.chanceTreeOnDeathChance
-    if Utils.FuzzyCompareDoubles(random, "<", chance) then
-        Reincarnation.AddReincarnatonToQueue(surface, targetPosition, "tree")
-    else
-        chance = chance + global.chanceBurningTreeOnDeathChance
-        if Utils.FuzzyCompareDoubles(random, "<", chance) then
-            Reincarnation.AddReincarnatonToQueue(surface, targetPosition, "burningTree")
-        end
-    end
-end
-
 Reincarnation.OnEntityDiedUnit = function(event)
     local entity = event.entity
-    if entity.force.name ~= "enemy" then
+    if not entity.has_flag("breaths-air") then
         return
     end
-    Reincarnation.BiterDied(entity)
+    if unitsIgnored[entity.name] then
+        return
+    end
+
+    local surface = entity.surface
+    local targetPosition = entity.position
+    local type = Utils.GetRandomEntryFromNormalisedDataSet(global.reincarantionChanceList, "chance")
+    table.insert(global.reincarnationQueue, {loggedTick = event.tick, surface = surface, position = targetPosition, type = type})
 end
 
 Reincarnation.AddTreeFireToPosition = function(surface, targetPosition)
